--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-        <h1>
-            Eleve seu negócio digital a outro nível. <strong>com um Front-end de qualidade</strong>
-        </h1>
-        <p>
-            Olá! Sou Joana Santos, desenvolvedora front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
-        </p>
-        <a href="/">Instagram</a>
-        <a href="/">GitHub</a>
+    <main class="main">
+        <section class="text-section">
+            <h1 >Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade</strong></h1>
+            <p>
+                Olá! Sou Joana Santos, desenvolvedora front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+            </p>
+            <div class="button-div">
+                <a class="button ig" href="/">Instagram</a>
+                <a class="button github"href="/">GitHub</a>
+            </div>
+        </section>
         <img src="/img/Imagem.png" alt="">
     </main>
 </body>
